Read/Write kml. Push all StreamEx dependencies into CollectionHelpers.